# SocialNetwork

./: .gitignore  docker-compose.yml  go.mod  go.sum
core/api-gateway/: Dockerfile  README.md  factory.py  main.py  pyproject.toml
core/api-gateway/client/rpc/: adapter.py  base.py  post_client.py  statistic_client.py
core/api-gateway/proto/: post.proto  stats.proto
core/clickhouse/: init.sql
core/gateway/: Dockerfile  README.md  main.go
core/post-service/: Dockerfile  README.md  pyproject.toml
core/post-service/app/: config.py  grpc.txt  main.py
core/post-service/app/arch/: database.py  methods.py
core/post-service/app/models/: models.py  schema.py
core/post-service/app/proto/: post.proto
core/post-service/app/service/: grpc_svc.py  kafka_producer.py  post_svc.py
core/post-service/migrations/: env.py
core/post-service/migrations/versions/: 8c5053c9acb9_uuid.py  d065b77d65e1_time.py
core/posts-comments/: README.md
core/statistics/: README.md
core/statistics-service/: Dockerfile  README.md  go.mod  go.sum
core/statistics-service/cmd/: main.go
core/user-service/: Dockerfile  README.md  alembic.ini  config.yaml  main.go  pyproject.toml
core/user-service/app/: config.py  dependencies.py  factories.py  main.py
core/user-service/app/api/: routes.py
core/user-service/app/arch/: database.py  methods.py
core/user-service/app/models/: models.py  schema.py
core/user-service/app/service/: auth.py
core/user-service/config/: config.go
core/user-service/handlers/: user.go  user_test.go
core/user-service/migrations/: env.py
core/user-service/migrations/versions/: 3ceb6e030355_init.py  76f27d74b4ef_uuid.py
core/user-service/models/: user.go
core/user-service/repository/: user.go  user_test.go
core/user-service/service/: user.go  user_test.go
docs/: arch.c4  gateway.mmd  posts-comments.mmd  statistics.mmd  user-service.mmd
(+16 files in other folders)
