[tool.poetry]
name = "api-gateway"
version = "0.1.0"
description = ""
authors = ["ilyasokur <47240755+ilyasokur@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
pyjwt = "^2.10.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
